--- a/Projekt/Teachify/Teachify/Student/StudentStoryboard.storyboard
+++ b/Projekt/Teachify/Teachify/Student/StudentStoryboard.storyboard
@@ -23,36 +23,41 @@
                                 <rect key="frame" x="0.0" y="249" width="768" height="726"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="5" id="mcJ-v7-MVe">
-                                    <size key="itemSize" width="620" height="420"/>
+                                    <size key="itemSize" width="630" height="420"/>
                                     <size key="headerReferenceSize" width="50" height="50"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="16" minY="0.0" maxX="8" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CardCell" id="iHY-kL-T1F" customClass="GameCardCell" customModule="Teachify" customModuleProvider="target">
-                                        <rect key="frame" x="78" y="50" width="620" height="420"/>
+                                        <rect key="frame" x="88" y="50" width="600" height="400"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="620" height="420"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="400"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ms1-kU-dZQ" customClass="CardHighlight" customModule="Cards">
-                                                    <rect key="frame" x="0.0" y="0.0" width="620" height="420"/>
-                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="600" height="500"/>
+                                                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                     <userDefinedRuntimeAttributes>
                                                         <userDefinedRuntimeAttribute type="string" keyPath="title" value="GG"/>
                                                         <userDefinedRuntimeAttribute type="string" keyPath="itemTitle" value="GG"/>
+                                                        <userDefinedRuntimeAttribute type="color" keyPath="shadowColor">
+                                                            <color key="value" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                        </userDefinedRuntimeAttribute>
                                                     </userDefinedRuntimeAttributes>
                                                 </view>
                                             </subviews>
                                         </view>
                                         <constraints>
-                                            <constraint firstItem="Ms1-kU-dZQ" firstAttribute="top" secondItem="iHY-kL-T1F" secondAttribute="top" id="6Bd-G5-EXA"/>
-                                            <constraint firstItem="Ms1-kU-dZQ" firstAttribute="leading" secondItem="iHY-kL-T1F" secondAttribute="leading" id="Ts1-an-0K8"/>
-                                            <constraint firstAttribute="bottom" secondItem="Ms1-kU-dZQ" secondAttribute="bottom" id="Wsk-b0-c3R"/>
-                                            <constraint firstAttribute="trailing" secondItem="Ms1-kU-dZQ" secondAttribute="trailing" id="pB0-l1-i2r"/>
+                                            <constraint firstItem="Ms1-kU-dZQ" firstAttribute="top" secondItem="iHY-kL-T1F" secondAttribute="top" id="Gia-mr-71L"/>
+                                            <constraint firstAttribute="bottom" secondItem="Ms1-kU-dZQ" secondAttribute="bottom" id="HnS-yd-RGS"/>
+                                            <constraint firstAttribute="trailing" secondItem="Ms1-kU-dZQ" secondAttribute="trailing" id="IsA-fb-HJ5"/>
+                                            <constraint firstItem="Ms1-kU-dZQ" firstAttribute="centerY" secondItem="iHY-kL-T1F" secondAttribute="centerY" id="SD2-wL-o1k"/>
+                                            <constraint firstItem="Ms1-kU-dZQ" firstAttribute="leading" secondItem="iHY-kL-T1F" secondAttribute="leading" id="ifh-GO-bUE"/>
+                                            <constraint firstItem="Ms1-kU-dZQ" firstAttribute="centerX" secondItem="iHY-kL-T1F" secondAttribute="centerX" id="lW2-qU-h4E"/>
                                         </constraints>
-                                        <size key="customSize" width="620" height="420"/>
+                                        <size key="customSize" width="600" height="400"/>
                                         <connections>
                                             <outlet property="view" destination="Ms1-kU-dZQ" id="voa-S7-gYz"/>
                                         </connections>
@@ -290,7 +295,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CdK-8f-BZy" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2399" y="-1396"/>
+            <point key="canvasLocation" x="2398.4375" y="-1396.2890625"/>
         </scene>
         <!--qr_scanner-->
         <scene sceneID="adA-6P-lOx">
